# giga-gen-project

./: .env.example  .gitignore  LICENSE  README.md  fusionbrain_kandinsky.py  main.py  pyproject.toml
scripts/: model3d_cli.py
src/configs/: Environment.py  logging.py  logging_config.py  meshy.py
src/routers/v1/: SimpleGeneratorRouter.py  kandinsky_generator.py  model3d_generator.py  simple_generator.py
src/schemas/errors/: SimpleGeneratorErrors.py  kandinsky_generator.py  model3d_generator.py  simple_generator.py
src/schemas/pydantic/: SimpleGeneratorSchema.py  kandinsky_generator.py  model3d_generator.py  simple_generator.py
src/services/: SimpleGeneratorService.py  kandinsky_generator.py  model3d_generator.py  simple_generator.py
