[project]
name = "giga-gen-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain-community>=0.3.29",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "gigachat>=0",
    "fusionbrain-sdk-python>=0",
    "pydantic-settings>=2.0.0",
]
